# FACE01_DEV

./: .gitignore  CHANGELOG.md  FACE01_VERSION  INSTALL_FACE01.sh  MANIFEST.ini  README.md  config.ini  current_requirements.txt  make_DockerImages.sh  make_document.sh  npKnown.npz  output.html  output.txt  pyproject.toml  requirements.txt  requirements_CPU.txt  requirements_GPU.txt  requirements_dev.txt  restats  src_structure.txt  version_control.py
FACE01.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
LICENSE/: LICENSE  YouTube_license.md  academic.md  why_apache_license.md
assets/: data_structure.txt  mediapipeにおけるスパムログ抑制.txt
docker/: Docker_INSTALL_FACE01.sh  Docker_INSTALL_FACE01_CPU.sh  Dockerfile_gpu  Dockerfile_no_gpu
docs/: .buildinfo  README.html  conf.html  conf.py  config_ini.md  docker.md  example.html  example_manual.html  face01lib.damo_yolo.damo_internal.apis.html  face01lib.damo_yolo.damo_internal.augmentations.box_level_augs.html  face01lib.damo_yolo.damo_internal.augmentations.html  face01lib.damo_yolo.damo_internal.base_models.backbones.html  face01lib.damo_yolo.damo_internal.base_models.heads.html  face01lib.damo_yolo.damo_internal.base_models.html  face01lib.damo_yolo.damo_internal.base_models.necks.html  face01lib.damo_yolo.damo_internal.config.html  face01lib.damo_yolo.damo_internal.dataset.datasets.evaluation.coco.html  face01lib.damo_yolo.damo_internal.dataset.datasets.evaluation.html  face01lib.damo_yolo.damo_internal.dataset.datasets.html  face01lib.damo_yolo.damo_internal.dataset.html  face01lib.damo_yolo.damo_internal.dataset.samplers.html  face01lib.damo_yolo.damo_internal.dataset.transforms.html  face01lib.damo_yolo.damo_internal.html  face01lib.damo_yolo.damo_internal.structures.html  face01lib.damo_yolo.damo_internal.utils.html  face01lib.damo_yolo.html  face01lib.html  face01lib.models.html  face01lib_manual.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  python_file.html  search.html  searchindex.js  setup.html  step_by_step.html  step_by_step_manual.html  (+2 more)
example/: CTKtest.py  Faiss_Outlier_Detection.py  LOF_Outlier_Detection.py  aligned_crop_face.py  anti_spoof.py  average_face.py  benchmark_CUI.py  benchmark_GUI_window.py  combination_counter.py  combination_similarity.py  (+28 more)
(+353 files in other folders)
