[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FACE01"
version = "3.04.01"
requires-python = ">=3.8"
dependencies = [
    "Pillow",
    "mediapipe",
    "memory-profiler",
    "mojimoji",
    "nptyping",
    "numpy",
    "onnx",
    "onnxruntime-gpu",
    "opencv-python",
    "protobuf",
    "psutil",
    "pyqrcode",
    "qrcode",
    "requests",
    "scipy",
    "torch",
    "torchvision",
    "tqdm",
    "typing_extensions",
    "urllib3",
]
license = {file = "LICENSE"}
readme = "README.md"
description = "顔認証学習モデルとユーティリティプログラム"
authors = [
    { name="Yoshitsugu Kesamaru", email="y.kesamaru@tokai-kaoninsho.com" }
]
keywords = ["face recognition"]

[project.urls]
Homepage = "https://tokai-kaoninsho.com/"
Documentation = "https://ykesamaru.github.io/FACE01_DEV/"
Repository = "https://github.com/yKesamaru/FACE01_DEV"

[tool.setuptools.packages.find]
where = ["."]
include = ["face01lib*"]

